# Kevin-finalproject

./: .gitignore  CLAUDE.md  PROPOSAL.md  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.cfg
data/classifier/tuning/: best_params.json
data/lstm/: X_test_seq.npy  feature_scaler.joblib  lstm_model_best.keras  lstm_model_final.keras  lstm_multitask_best.keras  lstm_multitask_final.keras  target_scaler.joblib  y_pred_dir_lstm.npy  y_pred_proba_lstm_multitask.npy  y_pred_reg_lstm.npy  y_test_cls_seq.npy  y_test_reg_raw_seq.npy  y_test_reg_seq.npy  y_train_cls_seq.npy  y_train_reg_raw_seq.npy  y_train_reg_seq.npy
data/multitask/processed/: sp500_2018_2024_features_targets.csv
data/multitask/tuning/: best_params.json
data/raw/: sp500_2018_2024.csv
data/tuning/: best_params.json
docs/: ARCHITECTURE.md
notebooks/: exploration.ipynb
results/: model_comparison.csv
src/: __init__.py  data_loader.py  evaluation.py  hyperparameter_tuning.py  models.py
src/finance_lstm/: __init__.py  config.py  download_data.py  evaluation.py  features.py  pipeline.py  preprocessing.py  visualization.py
src/finance_lstm/models/: __init__.py  baselines.py  lstm.py
tests/: test_baselines.py  test_download_data.py  test_evaluation.py  test_features.py  test_hypermeter_tuning.py  test_lstm_model.py  test_pipeline_import.py  test_preprocessing.py  test_visualization.py
