[metadata]
name = finance-lstm
version = 0.1.0
description = S&P 500 LSTM forecasting project
author = Your Name
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    numpy
    pandas
    yfinance
    ta
    scikit-learn
    xgboost
    tensorflow
    joblib

[options.packages.find]
where = src
